trying to solve issue with Hero h2 not showing up on safari

--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -67,6 +67,7 @@
 }
 
 .lineContainer h2 {
+  color: white;
   font-size: 30px;
   font-weight: 700;
 }
